--- a/js/index.html
+++ b/js/index.html
@@ -33,7 +33,7 @@
       <div class="row center">
           <div class="input-field col s12 m2 l3"></div>
           <div class="input-field col s12 m8 l6">
-          <input id="jscript" type="text" class="validate">
+          <textarea id="jscript" class="materialize-textarea"></textarea>
           <label for="jscript">JavaScript Script</label>
           </div>
           <a onclick="run()" class="waves-effect waves-light btn">Run</a>
