--- a/js/index.html
+++ b/js/index.html
@@ -33,7 +33,7 @@
       <div class="row center">
           <div class="input-field col s12 m2 l3"></div>
           <div class="input-field col s12 m8 l6">
-          <textarea id="jscript" class="materialize-textarea"></textarea>
+          <textarea id="jscript" class="materialize-textarea" style="font-family: Courier, 'Courier New', serif;"></textarea>
           <label for="jscript">JavaScript Script</label>
           </div>
           <a onclick="run()" class="waves-effect waves-light btn">Run</a>
