--- a/js/index.html
+++ b/js/index.html
@@ -69,6 +69,7 @@
   <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
   <script src="http://cdn.bootcss.com/materialize/0.97.6/js/materialize.min.js"></script>
   <script>(function($){$(function(){$('.button-collapse').sideNav()})})(jQuery);</script>
+  <script src="https://raw.githubusercontent.com/AlloyTeam/AlloyLever/gh-pages/alloy_lever.min.js"></script>
 
   </body>
 </html>
