--- a/js/index.html
+++ b/js/index.html
@@ -36,7 +36,9 @@
           <textarea id="jscript" class="materialize-textarea" style="font-family: Courier, 'Courier New', serif;"></textarea>
           <label for="jscript">JavaScript Script</label>
           </div>
-          <a onclick="run()" class="waves-effect waves-light btn">Run</a>
+          <a onclick="run()" class="waves-effect waves-light btn">Run</a><p></p>
+          <a onclick="test1()" class="waves-effect waves-light btn">test1()</a><p></p>
+          <a onclick="test2()" class="waves-effect waves-light btn">test2()</a><p></p>
           <div class="input-field col s12 m2 l3"></div>
       </div>
 
