--- a/test/recaptcha.html
+++ b/test/recaptcha.html
@@ -3,7 +3,9 @@
 <script src="https://www.recaptcha.net/recaptcha/api.js"></script>
 </head>
 <body>
-<button class="g-recaptcha" data-sitekey="6LeXORwUAAAAAFCqaeUQy2gJQM2fSWqI4kzj6rAM" data-callback="success"> Submit </button>
+
+<div class="g-recaptcha" data-sitekey="6LfbOhwUAAAAAM6CWAg4kfYFwyx_ol0RRZfy_BaZ"></div>
 <script>function success(){alert("success");}</script>
+
 </body>
 </html>
