--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<html><head><style>.row {
+<html><head><meta charset="utf-8"><style>.row {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
@@ -798,8 +798,10 @@
     left: 100%;
   }
 }
+
+body { margin: 0.5em; }
 </style></head><body>
 <div class="row"><div class="col s12 m5 l2">
-
-test</div><div class="col s12 m7 l10">test2</div>
+事件上报
+</div><div class="col s12 m7 l10">test2</div>
 </div></div>
